# octell

./: .gitignore  LICENSE  octell.cabal
src/: Octell.hs
