name:                octell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/tomsmalley/octell#readme
license:             BSD3
license-file:        LICENSE
author:              Tom Smalley
maintainer:          tfsmalley@gmail.com
copyright:           Copyright: (c) 2017 Tom Smalley
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Octell
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , random
  default-language:    Haskell2010

test-suite octell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , octell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tomsmalley/octell
